Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Attempt__c/PitchIQ_Attempt__c.object-meta.xml
<CustomObject>
    <label>PitchIQ Attempt</label>
    <nameField>
        <displayFormat>PIQ Attempt-{0000}</displayFormat>
        <label>PitchIQ Attempt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PitchIQ Attempts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>