Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Attempt__c/fields/Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Reason__c</fullName>
    <label>Fail Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing Key Topic</fullName>
            </value>
            <value>
                <fullName>Disallowed Claim Made</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>