Components/Agentforce Sales Coach Agent on Custom Object/Sales Coach Agent on Custom Object Setup/objects/PitchIQ_Attempt__c/fields/PitchIQ_Assignment__c.field-meta.xml
<CustomField>
    <fullName>PitchIQ_Assignment__c</fullName>
    <label>PitchIQ Assignment</label>
    <referenceTo>PitchIQ_Assignment__c</referenceTo>
    <relationshipLabel>PitchIQ Attempts</relationshipLabel>
    <relationshipName>PitchIQ_Attempts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>